[package]
name = "memorial-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A tool for collecting documentation from code comments"
repository = "https://github.com/Kostassoid/memorial"
categories = ["command-line-utilities"]
authors = ["Konstantin Alexandrov <k@kostassoid.com>"]

[dependencies]
anyhow = "1.0"
regex = "1"
time = { version = "0.3.11", features = ["formatting"] }
toml = "0.7.2"
clap = "4.1.6"
serde = "1"
serde_derive = "1"
derive-getters = "0.2.0"
strfmt = "0.2.4"
memorial-core = { path = "../memorial-core" }
