[package]
name = "memorial-core"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
regex = "1"
glob = "0.3.1"
pest = "2.0"
pest_derive = "2.0"
url = "2.3.1"
time = { version = "0.3.11", features = ["formatting"] }
serde = "1"
serde_derive = "1"
strfmt = "0.2.4"
memorial-macros = { path = "../memorial-macros" }